--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                    <p>東京象虫図案見本帖・原画集<br>
                    GRADUATION RESEARCH</p>
                     <p1>2022</p1>
-                    <p1>研究：自然界の形態をデザインとして用いる編集方法論</p1>
+                    <p1>自然界の形態をデザインとして用いる</p1>
                 </div>
                 
                 <div class="myChangeImage">
