--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                    <p3>東京象虫図案見本帖・原画集<br>
                    自然界の形態をデザインとして用いる編集方法の研究</p3>
                     <a href="https://yasunobuidei.github.io/menus.github.io/"><img src="show.png" alt="ロゴ" id="ss"></a>
+                    <p3>2023年度グッドデザイン・ニューホープ賞 入選</p3>
                     </div>
                     <p4>
                    ゾウムシの模様を取り出し、見本帖にまとめる。<br><br>
